--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6365 2007/05/27 09:17:50 tnn Exp $
+$NetBSD: TODO,v 1.6366 2007/05/28 07:26:53 heinz Exp $
 
 Suggested new packages
 ======================
@@ -866,7 +866,6 @@ Suggested package updates
 	o p5-Device-Gsm-1.48
 	o p5-Device-Modem-1.43
 	o p5-Device-SerialPort-1.2.0
-	o p5-Email-Abstract-2.132
 	o p5-ExtUtils-ParseXS-2.18
 	o p5-File-Copy-Recursive-0.31
 	o p5-File-NCopy-0.35
@@ -896,13 +895,11 @@ Suggested package updates
 	o p5-MP3-Info-1.22
 	o p5-Mac-Macbinary-0.06
 	o p5-Mail-Audit-2.218
-	o p5-Mail-ListDetector-1.01
 	o p5-Mail-Webmail-Gmail-1.09
 	o p5-MailTools-1.77
 	o p5-Math-Pari-2.010709
 	o p5-Math-Random-0.69
 	o p5-Module-Install-0.65
-	o p5-Module-Pluggable-3.5
 	o p5-Module-ScanDeps-0.72
 	o p5-Net-1.21
 	o p5-Net-Amazon-S3-0.38
