--- a/pkgtools/pkglint/TODO
+++ b/pkgtools/pkglint/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.57 2007/01/30 20:32:23 joerg Exp $
+$NetBSD: TODO,v 1.58 2007/05/29 01:35:05 schmonz Exp $
 
 Please add your own entries at the bottom of this file. If possible,
 include the name of an example package where a warning should occur.
@@ -10,8 +10,8 @@ include the name of an example package where a warning should occur.
   be used with lists.
 * record with each substring its source location to be able to make
   even more precise diagnostics
-* check wether CONFIG* override match, e.g. CONFIGURE_DIRS most likely
-  needs matching CNOFIG_GUESS_OVERRIDE and CONFIG_SUB_OVERRIDE as well
+* check whether CONFIG* override match, e.g. CONFIGURE_DIRS most likely
+  needs matching CONFIG_GUESS_OVERRIDE and CONFIG_SUB_OVERRIDE as well
 * Many of the checking routines need some context to provide better
   warnings. For example, checkline_foo() may need to know what has
   happened in the file before that line.
@@ -32,3 +32,5 @@ include the name of an example package where a warning should occur.
   gdal-1.3.1 will, aber das distinfo noch die Checksum von 1.2.6 hat.
   Magst vielleicht einen Test einbauen, der schaut, ob die zusammenpassen?
 * Complain about configure patches with ": Avoid regenerating within pkgsrc" chunks
+* Check for parallel files/dirs whose names differ only in case.
+* Check for German text in pkgtools/pkglint/TODO.
