--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6375 2007/06/01 20:47:25 wiz Exp $
+$NetBSD: TODO,v 1.6376 2007/06/03 10:41:14 jmmv Exp $
 
 Suggested new packages
 ======================
@@ -1176,7 +1176,6 @@ Suggested package updates
 	o skype-1.4.0.64
 	o smalleiffel-0.90
 	o smalltalk-2.3.4
-	o smartmontools-5.37 [jmmv]
 	o smlnj-110.59 [pkgsrc-wip]
 	o smlnj-110.62
 	o smokeping-2.1.0
