--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6379 2007/06/05 05:51:11 wiz Exp $
+$NetBSD: TODO,v 1.6380 2007/06/05 06:28:31 wiz Exp $
 
 Suggested new packages
 ======================
@@ -409,6 +409,7 @@ Suggested package updates
 	o devhelp-0.14
 	o devtodo-0.1.19
 	o dhid-5.3
+	o dialog-1.1.20070528
 	o diction-1.10
 	o dinotrace-9.3e
 	o dinotrace-mode-9.3e
@@ -420,6 +421,7 @@ Suggested package updates
 	o dnstracer-1.8
 	o doxygen-1.5.2
 	o dpkg-1.13.25
+	o drraw-2.2a4
 	o drscheme-370
 	o dvd+rw-tools-7.0
 	o dvdrip-0.98.6
@@ -451,7 +453,7 @@ Suggested package updates
 	o epic4-2.6
 	o epiphany-extensions-2.18.2
 	o epstool-3.08
-	o eric3-3.9.5
+	o eric3-4.0.0 [now called eric4]
 	o erlang-11.3
 	o erlang-doc-11.3
 	o erlang-man-11.3
@@ -515,7 +517,7 @@ Suggested package updates
 	o ghostscript-esp-8.15.3
 	o gifsicle-1.48
 	o gimp-docs-2.0.10
-	o gimp-print-5.0 [now called gutenprint]
+	o gimp-print-5.1.2 [now called gutenprint]
 	o gimp-ufraw-0.11 [pkg/36315]
 	o gkrellm-multiping-2.0.13
 	o gkrellm-snmp-1.0
@@ -625,7 +627,7 @@ Suggested package updates
 	o imapsync-1.217
 	o instiki-0.11pl1
 	o intercal-0.24
-	o ion3-devel-20070203 [pkg/36108]
+	o ion3-devel-20070318 [pkg/36108]
 	o ion3-devel-20070506
 	o iozone-3.283
 	o ipa-2.1.11
@@ -762,6 +764,7 @@ Suggested package updates
 	o mknmz-wwwoffle-0.7.2
 	o mksh-29
 	o mkvtoolnix-2.0.2
+	o mldonkey-2.8.7
 	o mlview-0.9.0
 	o mmg-2.0.2
 	o moc-2.4.1
@@ -774,7 +777,7 @@ Suggested package updates
 	o mp3blaster-3.2.3
 	o mp3check-0.8.3
 	o mpfr-2.2.1
-	o mpg123-0.65
+	o mpg123-0.66
 	o mpi-ch-1.2.7p1
 	o mpich-1.2.7
 	o mplayer-plugin-firefox-3.40
@@ -782,7 +785,8 @@ Suggested package updates
 	o msf-2.7
 	o msmtp-1.4.11
 	o mtail-1.1.1 [pkg/34512]
-	o multitail-5.0.3
+	o mtools-3.9.11
+	o multitail-5.0.4
 	o muse-0.9.2
 	o musicbrainz-3.0.0
 	o musicpd-0.12.2
@@ -1020,6 +1024,7 @@ Suggested package updates
 	o pnetlib-0.7.4
 	o po4a-0.29
 	o polsms-2.1.0
+	o poppler-0.5.9
 	o poppy-4.01
 	o poptop-1.3.0
 	o posh-0.5.5
@@ -1034,6 +1039,7 @@ Suggested package updates
 	o proxsmtp-1.6
 	o psmisc-21.9
 	o pstoedit-3.43
+	o psvn-25241 [pkg/36420]
 	o puf-0.93.3
 	o putty-0.60
 	o puzzle-5.2
@@ -1157,12 +1163,12 @@ Suggested package updates
 	o sharity-3.3
 	o sharity-light-1.3
 	o shc-3.8
-	o shntool-3.0.2
+	o shntool-3.0.3
 	o shorten-3.6.1
 	o siag-3.6.1
 	o sign-1.0.7
 	o silc-toolkit-1.0 [salo, breaks chat/gaim]
-	o silc-toolkit-1.0.2
+	o silc-toolkit-1.1
 	o simh-3.7.0
 	o simulavr-0.1.2.2
 	o sipcalc-1.1.4
@@ -1174,9 +1180,9 @@ Suggested package updates
 	o skkinput-2.06.4
 	o skype-1.4.0.64
 	o smalleiffel-0.90
-	o smalltalk-2.3.4
+	o smalltalk-2.3.5
 	o smlnj-110.59 [pkgsrc-wip]
-	o smlnj-110.62
+	o smlnj-110.64
 	o smokeping-2.1.0
 	o snd-9.0
 	o snes9x-1.51
@@ -1200,6 +1206,7 @@ Suggested package updates
 	o swfdec-0.4.3
 	o swi-prolog-5.6.31
 	o sylpheed-claws-2.9.2 [now claws-mail]
+	o sympa-5.3
 	o sysinfo-4.2.2
 	o tcl83-8.3.5
 	o tcpdpriv-0.9
@@ -1279,6 +1286,7 @@ Suggested package updates
 	o weex-2.6.1.5 [at http://weex.sourceforge.net/]
 	o winbind-3.0.13
 	o windowlab-1.34
+	o wine-0.9.38
 	o wmii-3.5.1
 	o wml-2.0.11
 	o wmweather-2.4.4
@@ -1348,7 +1356,7 @@ Suggested package updates
 	o xtu-1.3
 	o xtux-20030306
 	o xv-20070520
-	o xvidcap-1.1.5
+	o xvidcap-1.1.6
 	o xview-3.2.1.4.21.2
 	o xwpe-1.5.30a
 	o xzip-182
@@ -1359,7 +1367,7 @@ Suggested package updates
 	o zebra-0.95a
 	o zenicb-1.31 (needs merge with lots of local changes)
 	o zenity-2.18.2
-	o zile-2.2.32
+	o zile-2.2.33
 	o zircon-1.18.256
 	o zoom-1.0.5
 	o zope-2.10.3
