--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6380 2007/06/05 06:28:31 wiz Exp $
+$NetBSD: TODO,v 1.6381 2007/06/06 09:35:32 martti Exp $
 
 Suggested new packages
 ======================
@@ -429,7 +429,6 @@ Suggested package updates
 	o dvipdfmx-20061211
 	o dvipng-1.9
 	o dwm-4.1
-	o e2fsprogs-1.39
 	o eagle-4.16
 	o easymenu-0.7.2p1
 	o ec-fonts-mftraced-1.0.12
