--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6383 2007/06/06 12:49:12 tnn Exp $
+$NetBSD: TODO,v 1.6384 2007/06/06 19:34:31 adrianp Exp $
 
 Suggested new packages
 ======================
@@ -987,7 +987,6 @@ Suggested package updates
 	o pgpool-3.1.1
 	o phoon-20050629
 	o photopc-3.05
-	o php-5.2.3
 	o php4-domxml-5.2.1
 	o php4-filepro-5.2.1
 	o php4-xslt-5.2.1
