--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6387 2007/06/06 23:51:16 minskim Exp $
+$NetBSD: TODO,v 1.6388 2007/06/07 04:50:21 wiz Exp $
 
 Suggested new packages
 ======================
@@ -764,7 +764,6 @@ Suggested package updates
 	o mknmz-wwwoffle-0.7.2
 	o mksh-29
 	o mkvtoolnix-2.0.2
-	o mldonkey-2.8.7
 	o mlview-0.9.0
 	o mmg-2.0.2
 	o moc-2.4.1
