--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6390 2007/06/07 15:18:26 obache Exp $
+$NetBSD: TODO,v 1.6391 2007/06/07 19:49:43 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1192,7 +1192,6 @@ Suggested package updates
 	o source-highlight-2.6
 	o spcaview-20060501
 	o spim-7.3
-	o sqlite3-3.3.17
 	o sqlitemanager-1.1.3
 	o squeak-3.9.8
 	o squidGuard-1.2.0p3
