--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6405 2007/06/08 12:25:38 wiz Exp $
+$NetBSD: TODO,v 1.6406 2007/06/08 12:43:48 wiz Exp $
 
 Suggested new packages
 ======================
@@ -273,7 +273,7 @@ Suggested package updates
 	o alee-ttf-11.2
 	o algae-4.3.6
 	o aliados-0.2.0
-	o amanda-2.5.2
+	o amanda-2.5.2p1
 	o amanda-client-2.5.0
 	o amanda-common-2.5.0
 	o amanda-plot-2.5.0
@@ -372,6 +372,7 @@ Suggested package updates
 	o cocoon-2.1.10
 	o connect-1.96
 	o conserver8-8.1.15
+	o cook-2.28
 	o coreutils-6.9
 	o courier-authlib-0.59
 	o courier-imap-4.1.2
@@ -456,6 +457,7 @@ Suggested package updates
 	o etach-1.4.1
 	o eukleides-1.0.3
 	o ex-20050325
+	o expat-2.0.1
 	o ezmlm-idx-5.1.0 [schmonz]
 	o ezxml-0.8.6
 	o f2c-20061008
@@ -713,7 +715,7 @@ Suggested package updates
 	o libxml++2-2.18.0
 	o licq-1.3.4
 	o licq-core-1.3.0
-	o liferea-1.2.14
+	o liferea-1.2.16b
 	o lilypond-2.10.20
 	o lincvs-2.0.0 [now called CrossVC]
 	o linuxsms-0.77
@@ -823,7 +825,9 @@ Suggested package updates
 	o olvwm-4.5
 	o onyx-5.1.2
 	o oo2c-2.1.7
+	o openbox-3.4.0
 	o openh323-1.19.1
+	o openldap-2.3.35
 	o openldap-client-2.3.34
 	o openmortal-0.7.1
 	o openpam-20050616
@@ -1152,9 +1156,9 @@ Suggested package updates
 	o smalleiffel-0.90
 	o smalltalk-2.3.5
 	o smlnj-110.59 [pkgsrc-wip]
-	o smlnj-110.64
+	o smlnj-110.65
 	o smokeping-2.1.0
-	o snd-9.0
+	o snd-9.1
 	o snes9x-1.51
 	o sope-4.5.9
 	o sound-juicer-2.16.4 [needs nautilus-cd-burner>=2.15.3]
@@ -1250,6 +1254,7 @@ Suggested package updates
 	o wap-utils-1.4.1
 	o wcalc-2.2.2
 	o wdm-1.28
+	o weechat-0.2.5
 	o weewm-0.01
 	o weex-2.6.1.5 [at http://weex.sourceforge.net/]
 	o winbind-3.0.13
@@ -1258,7 +1263,7 @@ Suggested package updates
 	o wmii-3.5.1
 	o wml-2.0.11
 	o wmweather-2.4.4
-	o worker-2.14.4
+	o worker-2.15.0
 	o wpa_gui-0.5.7
 	o wpi-firmware-1.14.2
 	o wwwoffle-2.9b
@@ -1281,7 +1286,7 @@ Suggested package updates
 	o xeukleides-1.0.1
 	o xf86-input-keyboard-1.2.0
 	o xfstt-1.7
-	o xine-lib-1.1.6
+	o xine-lib-1.1.7
 	o xine-ui-0.99.5
 	o xisp-2.7p4
 	o xkbset-0.5
