--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6408 2007/06/08 13:10:28 wiz Exp $
+$NetBSD: TODO,v 1.6409 2007/06/08 13:20:49 obache Exp $
 
 Suggested new packages
 ======================
@@ -779,7 +779,6 @@ Suggested package updates
 	o multitail-5.0.4
 	o muse-0.9.2
 	o musicpd-0.12.2
-	o mzscheme-360 [pkg/36330]
 	o nagios-3.0a4
 	o nano-1.2.5 [pkg/32859|pkg/34511]
 	o nano-2.0.6
